styles/upcoming-match.css
/* Fonts */

/* Poppins Font */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');

/* Oleo Script Swash Caps Font */

@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap');

/* Top Banner Styles */

.top-banner {
    background-color: black;
    display: flex;
    border-radius: 15px;
}

.left-side {
    padding-left: 60px;
}

.banner-title {
    color: cyan;
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    font-size: 70px;
    margin: 0%;
}

.banner-details {
    color: cyan;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 16px;
    margin: 0%;
}

.banner-link {
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 20px;
    color: white;
    text-decoration: none;
    background-image: radial-gradient(red, red);
    padding: 5px 10px;
    border-radius: 5px;
    animation-name: link;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
    animation-delay: 0.5s;
    animation-play-state: running;
    animation-iteration-count: infinite;
}

@keyframes link {
    from {
        color: white;
        background-image: radial-gradient(rgb(14, 150, 26), rgb(14, 150, 26));
        padding: 0px 0px;
        border-radius: 10px;
    }

    to {
        font-style: italic;
        color: cyan;
        background-image: radial-gradient(hsl(0, 100%, 50%), rgb(255, 0, 0));
        padding: 5px 10px;
        border-radius: 5px;
    }
}

span {
    padding-left: 20px;
}

.right-side {
    width: 100%;
}

.right-side img {
    width: 100%;
}

/*----------------------- 
     Navigation Styles 
-------------------------*/
.container {
    padding-top: 40px;
    display: flex;
    column-gap: 20px;
}

.navigation-box {
    background-color: slategrey;
    border: 1px solid black;
    border-radius: 5px;
    width: max-content;
}

.navigation-bar {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px 20px;
}

.nav-1 {
    font-family: 'Poppins', sans-serif;
    color: aqua;
    font-size: 20px;
    padding: 10px 40px;
    text-decoration: none;
    border: 1px solid black;
    border-radius: 10px;
    margin-bottom: 15px;
    background-color: green;
}

.nav-2 {
    font-family: 'Poppins', sans-serif;
    color: aqua;
    font-size: 20px;
    padding: 10px 40px;
    text-decoration: none;
    border: 1px solid black;
    border-radius: 10px;
    margin-bottom: 15px;
    background-color: green;
}

.nav-3 {
    font-family: 'Poppins', sans-serif;
    color: aqua;
    font-size: 20px;
    padding: 10px 40px;
    text-decoration: none;
    border: 1px solid black;
    border-radius: 10px;
    background-color: green;
}

.nav-1:hover {
    background-color: wheat;
    color: orangered;
}

.nav-2:hover {
    background-color: wheat;
    color: orangered;
}

.nav-3:hover {
    background-color: wheat;
    color: orangered;
}

/*-----------------
   Blogs Styles 
-------------------*/
.blogs {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 100px;
    row-gap: 100px;
}
.blog {
    box-shadow: 0 0 15px -10px;
}
.blog-thumbnail {
    display: flex;
}

.blog-thumbnail p {
    font-family: 'Poppins';
    font-weight: 700;
    font-size: 16px;
}

.blog-details h3 {
    font-family: 'Poppins';
    font-weight: 600;
    font-size: 20px;
}

/*-----------------
   Footer Styles 
-------------------*/
footer {
    background-color: rgb(232, 105, 82);
}

.quote {
    text-align: center;
    font-family: 'Oleo Script Swash Caps', cursive;
    font-style: italic;
    padding: 40px;
}

hr {
    width: 90%;
}

.contact-info {
    display: flex;
    justify-content: space-around;
    padding-bottom: 40px;
}

.contact-info p {
    font-family: 'Oleo Script Swash Caps', cursive;
    font-style: italic;
    font-size: 20px;
}

.social-media {
    display: flex;
    justify-content: center;
    padding-bottom: 40px;
}

.fa-facebook {
    font-size: 30px;
    padding-right: 20px;
}

.fa-whatsapp {
    font-size: 30px;
    padding-right: 20px;
}

.fa-linkedin {
    font-size: 30px;
}

